compiler-core/src/parse/snapshots/gleam_core__parse__tests__external_attribute_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype Wibble {\n    @external(erlang, \"one\", \"two\")\n    Wibble1\n}\n"
---
----- SOURCE CODE

type Wibble {
    @external(erlang, "one", "two")
    Wibble1
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     @external(erlang, "one", "two")
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This attribute cannot be used on a variant.

Hint: Did you mean `@deprecated`?
